Don't always force recalc for getComputedStyle in shadow trees.

We used to force clean style and layout tree getComputedStyle queries to
elements inside shadow trees. This was because the traversal in
Document::NeedsLayoutTreeUpdateForNode() skipped slots and shadow roots.
Now that slots are included in the flat tree, we can simply add checks
for shadow roots walking up the flat tree.

TEST=fast/dom/shadow/sibling-rules-under-shadow-root.html

Bug: 704421
Change-Id: Iee46f326ea96c0a4fad3e09b7784cf86d1dcdc85
Reviewed-on: https://chromium-review.googlesource.com/950042
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Reviewed-by: Hayato Ito <hayato@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542386}
Former-commit-id: 913382f37e466b5e59a57445e36ff5e8ef9f6f13